--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^5.59.17",
+    "@tanstack/react-query-devtools": "^5.59.19",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
