--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-slideshow-image": "^4.3.2",
+    "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
