--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.9",
     "vite-plugin-eslint": "^1.8.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
