--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "vite": "^5.4.9",
     "vite-plugin-eslint": "^1.8.1"
   },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+  "pnpm": {
+    "overrides": {
+      "rollup": "npm:@rollup/wasm-node"
+    }
   }
 }
