--- a/package.json
+++ b/package.json
@@ -1,50 +1,52 @@
 {
-  "name": "sport_ecommerce_web",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.46.1",
-    "@tanstack/react-query": "^5.59.17",
-    "@tanstack/react-query-devtools": "^5.59.19",
-    "axios": "^1.7.7",
-    "chart.js": "^4.4.6",
-    "dotenv": "^16.4.5",
-    "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0",
-    "react-slideshow-image": "^4.3.2",
-    "react-toastify": "^10.0.6",
-    "styled-components": "^6.1.13"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-react": "^7.37.1",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.13",
-    "globals": "^15.11.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.9",
-    "vite-plugin-eslint": "^1.8.1"
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.9.5"
-  }
+    "name": "sport_ecommerce_web",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@supabase/supabase-js": "^2.46.1",
+        "@tanstack/react-query": "^5.59.17",
+        "@tanstack/react-query-devtools": "^5.59.19",
+        "axios": "^1.7.7",
+        "chart.js": "^4.4.6",
+        "dotenv": "^16.4.5",
+        "prettier": "^3.4.2",
+        "prettier-plugin-tailwindcss": "^0.6.10",
+        "react": "^18.3.1",
+        "react-chartjs-2": "^5.2.0",
+        "react-dom": "^18.3.1",
+        "react-hook-form": "^7.53.2",
+        "react-icons": "^5.3.0",
+        "react-router-dom": "^6.27.0",
+        "react-slideshow-image": "^4.3.2",
+        "react-toastify": "^10.0.6",
+        "styled-components": "^6.1.13"
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@eslint/js": "^9.13.0",
+        "@types/react": "^18.3.11",
+        "@types/react-dom": "^18.3.1",
+        "@vitejs/plugin-react": "^4.3.3",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^8.57.1",
+        "eslint-config-react-app": "^7.0.1",
+        "eslint-plugin-react": "^7.37.1",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.13",
+        "globals": "^15.11.0",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.14",
+        "vite": "^5.4.9",
+        "vite-plugin-eslint": "^1.8.1"
+    },
+    "optionalDependencies": {
+        "@rollup/rollup-linux-x64-gnu": "^4.9.5"
+    }
 }
