--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.53.2",
         "react-icons": "^5.3.0",
+        "react-image-gallery": "^1.4.0",
         "react-router-dom": "^6.27.0",
         "react-slideshow-image": "^4.3.2",
         "react-toastify": "^10.0.6",
